<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#414141"
        tools:context=".SteeringPanel">

    <ImageButton
            app:layout_constraintCircleRadius="10dp"
            android:layout_width="244dp"
            android:layout_height="40dp"
            app:srcCompat="@drawable/disconnect_button"
            android:id="@+id/image_disconnect"
            android:background="@null"
            android:scaleType="fitCenter"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.486"
            android:contentDescription="@string/disconnect_btn_desc"/>
    <ImageButton
            android:layout_width="100dp"
            android:scaleType="fitCenter"
            android:layout_height="100dp"
            app:srcCompat="@drawable/blue_button_up"
            android:id="@+id/button_backward"
            android:background="@null"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="220dp"
            android:layout_marginLeft="150dp"
            android:layout_marginStart="150dp" android:contentDescription="@string/backward_btn_desc"/>
    <ImageButton
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@null"
            app:srcCompat="@drawable/blue_button_right"
            android:id="@+id/button_left"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="80dp"
            android:layout_marginStart="80dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="152dp" android:contentDescription="@string/left_btn_desc"/>
    <ImageButton
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/blue_button_left"
            android:background="@null"
            android:scaleType="fitCenter"
            android:id="@+id/button_right"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="220dp"
            android:layout_marginStart="220dp"
            android:layout_marginTop="152dp" android:contentDescription="@string/right_btn_desc"/>
    <ImageButton
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/blue_button_down"
            android:background="@null"
            android:id="@+id/button_forward"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="80dp"
            android:layout_marginLeft="150dp"
            android:layout_marginStart="150dp" android:contentDescription="@string/forward_btn_desc"/>
    <ImageButton
            android:layout_width="100dp"
            android:layout_height="100dp" app:srcCompat="@drawable/red_button_left"
            android:id="@+id/button_up"
            android:background="@null"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginRight="220dp" android:layout_marginEnd="220dp" android:layout_marginTop="152dp"
            android:contentDescription="@string/up_btn_desc"/>
    <ImageButton
            android:layout_width="100dp"
            android:layout_height="100dp" app:srcCompat="@drawable/red_button_up"
            android:background="@null"
            android:scaleType="fitCenter"
            android:id="@+id/button_liftup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginRight="150dp" android:layout_marginEnd="150dp" android:layout_marginTop="80dp"
            android:contentDescription="@string/lift_up_btn_desc"/>
    <ImageButton
            android:layout_width="100dp"
            android:layout_height="100dp" app:srcCompat="@drawable/red_button_right"
            android:id="@+id/button_down"
            android:background="@null"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="152dp"
            android:layout_marginRight="80dp" android:layout_marginEnd="80dp"
            android:contentDescription="@string/down_btn_desc"/>
    <ImageButton
            android:layout_width="100dp"
            android:layout_height="100dp" app:srcCompat="@drawable/red_button_down"
            android:id="@+id/button_liftdown"
            android:background="@null"
            android:scaleType="fitCenter"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="220dp" android:layout_marginRight="150dp" android:layout_marginEnd="150dp"
            android:contentDescription="@string/lower_btn_desc"/>
    <Button
            android:text="Turn the lights on"
            android:textSize="10sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button_lights"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp" android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            android:contentDescription="@string/lights_btn"/>
</androidx.constraintlayout.widget.ConstraintLayout>